修正しました。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,6 @@
 @import "./font-awesome-sprockets";
 @import "./font-awesome";
 @import "./main_chat";
+@import "./user";
+@import "config/colors";
+@import "modules/flash";
