--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,14 +1,15 @@
 .chat-side
   .side-header
     .side-header__box
-      .side-header__box__user-name toga
+      .side-header__box__user-name
+        = current_user.name
       .side-header__box__menu
         .side-header__box__menu__new-group
           = link_to  do
             = icon('fas','edit')
         .side-header__box__menu__edit-user
-          = link_to  do
-            = icon('fas','cog')
+          = link_to edit_user_path(current_user) do
+            = icon('fas', 'cog', class: 'icon')
   
   .class-groups
     = link_to do
