--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -1,17 +1,13 @@
 .chat-side {
-  height: 100vh;
-  width:300px;
+  width: 300px;
   color: white;
   float: left;
-  background-color: #253141;
-  font-weight: bold;
   .side-header{
-    background-color: green($color: #253141);
+    background-color: #253141;
     height: 100px;
-    padding: 20px;
-    color: white;
     display: flex;
-    align-items: center;
+    align-items: center;    
+    padding: 0 20px;
     &__box{
       display: flex;
       justify-content: space-between;
@@ -34,23 +30,35 @@
     height: calc(100vh - 100px);
     padding: 20px 20px 0;
     overflow: scroll;
-      a {
-        color: white;
-        text-decoration: none;
-        &__class__group {
-          margin-bottom: 40px;
-          __group-name {
-            font-size: 15px;
-            color: white;
-            margin-bottom: 5px;
-          }
-          __latest-message{
-            font-size: 11px;
+    a {
+      color: white;
+      text-decoration: none;
+      &__class__group {
+        margin-bottom: 40px;
+
+        &__group-name {
+          font-size: 15px;
+          color: white;
+          margin-bottom: 5px;
+        }
+        __latest-message {
+          font-size: 11px;
           }  
         }
       }   
-      
-  }
+    }   
+
+    .class__group-name {
+      font-size: 15px;
+      color: white;
+      // margin-bottom: 5px;
+    }
+
+    .class-group__latest-message {
+      font-size: 11px;
+      color: white;
+      margin-top: 5px;
+    }
         
 
   }
