--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -2,3 +2,22 @@
   box-sizing: border-box;
 }
 
+.messages {
+  
+}
+
+  .upper-message {
+    display: flex;
+  }
+    
+    .upper-message__user-name {
+      color: #434a54;
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    .upper-message__date {
+      color: #999999;
+      font-size: 12px;
+      margin-left: 25px;
+    }
