--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,15 +2,27 @@
   .main-header
     .main-header__left-box
       .main-header__left-box__current-group
+        guru-pumei
       .main-header__left-box__member-list
-        .main-header__left-box__member-list__member toga
-    = link_to  do
+        .main-header__left-box__member-list__member Menber:toga
+    = link_to edit_group_path (@group) do
       .main-header__left-box__edit-btn  Edit
+
+
   .massages
+    = render @messages
+
+ 
+
   .form
-    %form.new__message
-      %input{type: "text", class: "input-box__text", placeholder: "type a message"}
-      %label{class: "input-box__image"}
-        = icon('fas', 'image')
-        %input{type: "file", class: "input-box__image__file"}
-      %input{type: "submit", class: "submit-btn"}
+    = form_for [@group, @message] do |f|
+      .new-messages
+        .input-box
+          = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+          .form__image
+            = f.label :image, class: 'input-box__image' do
+              = icon('fas', 'image', class: 'icon')
+              = f.file_field :image, class: 'input-box__image__file'
+        = f.submit 'Send', class: 'submit-btn'
+
+    
