--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,9 +2,12 @@
   .main-header
     .main-header__left-box
       .main-header__left-box__current-group
-        guru-pumei
+        = @group.name
       .main-header__left-box__member-list
-        .main-header__left-box__member-list__member Menber:toga
+        Member:
+        .main-header__left-box__member-list__member 
+          - @group.group_users.each do |group_user|
+            = group_user.user.name
     = link_to edit_group_path (@group) do
       .main-header__left-box__edit-btn  Edit
 
