--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,15 +1,15 @@
 .main-chat
   .main-header
     .main-header__left-box
-      .main-header__left-box__current-group
+      .main-header__left-box__current-group{"data-group_id": @group.id}
         guru-pumei
       .main-header__left-box__member-list
         .main-header__left-box__member-list__member Menber:toga
-    = link_to edit_group_path (@group) do
+    = link_to edit_group_path (current_user) do
       .main-header__left-box__edit-btn  Edit
 
 
-  .massages
+  .message
     = render @messages
 
  
