--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -4,7 +4,9 @@
       .main-header__left-box__current-group{"data-group_id": @group.id}
         = @group.name
       .main-header__left-box__member-list
-        .main-header__left-box__member-list__member Menber:toga
+        .main-header__left-box__member-list__member
+          - @group.group_users.each do |group_user|
+            = group_user.user.name
     = link_to edit_group_path (current_user) do
       .main-header__left-box__edit-btn  Edit
 
