--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -4,6 +4,7 @@
       .main-header__left-box__current-group{"data-group_id": @group.id}
         = @group.name
       .main-header__left-box__member-list
+        Member:
         .main-header__left-box__member-list__member
           - @group.group_users.each do |group_user|
             = group_user.user.name
