--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -34,7 +34,7 @@
       }
       } 
     } 
-  .message{
+  .massages{
     height: calc(100vh - 190px);
     padding: 46px 40px;
     background-color: #fafafa;
