--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,18 +1,18 @@
 .main-chat
   .main-header
     .main-header__left-box
-      .main-header__left-box__current-group{"data-group_id": @group.id}
+      .main-header__left-box__current-group
         = @group.name
       .main-header__left-box__member-list
         Member:
-        .main-header__left-box__member-list__member
+        .main-header__left-box__member-list__member 
           - @group.group_users.each do |group_user|
             = group_user.user.name
-    = link_to edit_group_path (current_user) do
+    = link_to edit_group_path (@group) do
       .main-header__left-box__edit-btn  Edit
 
 
-  .message
+  .massages
     = render @messages
 
  
