--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,7 +1,7 @@
 .main-chat
   .main-header
     .main-header__left-box
-      .main-header__left-box__current-group
+      .main-header__left-box__current-group{"data-group_id": "#{@group.id}"}
         = @group.name
       .main-header__left-box__member-list
         Member:
@@ -12,7 +12,7 @@
       .main-header__left-box__edit-btn  Edit
 
 
-  .massages
+  .messages
     = render @messages
 
  
